--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "hbs": "^4.0.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.9.1",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
