--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "hbs": "^4.0.1",
