--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/raymeibaum/pubcrawlr#readme",
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
@@ -30,6 +31,7 @@
     "mongoose": "^4.9.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "simple-ajax": "^2.6.0"
   }
 }
